Updated UI and fixed bugs

--- a/index.html
+++ b/index.html
@@ -754,18 +754,18 @@ footer {
         advice and robust support, ensuring compliance, optimizing financial
         health, and fostering sustainable growth. We pride ourselves on
         building lasting relationships based on trust, transparency, and a
-        client-centric approach.
+        client-centric Approach.
       </p>
     </div>
     <div class="about-box">
       <p><strong>Qualification:</strong> C.A. (Final), L.L.B., B.Com</p>
-      <p><strong>Specialisation:</strong> Taxation, Audit, Compliance</p>
+      <p><strong>Specialisation:</strong> Taxation, Audit & Legal Compliance</p>
       <p><strong>Experience:</strong> Over 7 years in financial and legal advisory</p>
       <p><strong>Approach:</strong> Client-centric, ethical, and results-driven</p>
       <p><strong>Mission:</strong> Empowering clients with strategic financial and legal solutions</p>
       <p><strong>Values:</strong> Integrity, Excellence, Transparency</p>
       <p><strong>Languages:</strong> English, Hindi, Gujarati</p>
-      <p><strong>Memberships:</strong> Bar Council of Gujarat, ICAI</p>
+      <p><strong>Memberships:</strong> Bar Council of Gujarat</p>
     </div>
   </div>
 </section>
